--- a/app/src/main/res/layout/activity_initial_survey2.xml
+++ b/app/src/main/res/layout/activity_initial_survey2.xml
@@ -36,12 +36,12 @@
             android:layout_alignParentLeft="true"
             android:layout_marginBottom="10dp"
             android:background="@color/teal"
+            android:onClick="openPrevious"
             android:padding="15dp"
             android:text="@string/previous"
             android:textAlignment="center"
             android:textColor="@color/init_survey_btn_text_color"
-            android:textSize="16sp"
-            android:onClick="openPrevious"/>
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/next_button"
@@ -50,13 +50,14 @@
             android:layout_alignParentRight="true"
             android:layout_marginBottom="10dp"
             android:background="@color/teal"
+            android:onClick="openNext"
             android:padding="15dp"
             android:text="next"
             android:textAlignment="center"
             android:textColor="@color/init_survey_btn_text_color"
-            android:textSize="16sp"
-            android:onClick="openNext"/>
+            android:textSize="16sp" />
     </RelativeLayout>
+
     <LinearLayout
         android:id="@+id/container2"
         android:layout_width="match_parent"
@@ -65,6 +66,7 @@
         android:background="@color/white"
         android:orientation="vertical"
         android:padding="0dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -88,6 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/init_survey_btn_margin"
                 android:background="@drawable/survey_btn_border"
+                android:onClick="onButtonClicked"
                 android:paddingLeft="@dimen/init_survey_btn_padding_left"
                 android:paddingTop="@dimen/init_survey_btn_padding"
                 android:paddingRight="@dimen/init_survey_btn_padding"
@@ -95,8 +98,7 @@
                 android:text="Never"
                 android:textColor="@color/init_survey_btn_text_color"
                 android:textSize="@dimen/init_survey_btn_text_size"
-                android:textStyle="bold"
-                android:onClick="onButtonClicked"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/less_a_month"
@@ -104,6 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/init_survey_btn_margin"
                 android:background="@drawable/survey_btn_border"
+                android:onClick="onButtonClicked"
                 android:paddingLeft="@dimen/init_survey_btn_padding_left"
                 android:paddingTop="@dimen/init_survey_btn_padding"
                 android:paddingRight="@dimen/init_survey_btn_padding"
@@ -111,8 +114,7 @@
                 android:text="less than once a month"
                 android:textColor="@color/init_survey_btn_text_color"
                 android:textSize="@dimen/init_survey_btn_text_size"
-                android:textStyle="bold"
-                android:onClick="onButtonClicked"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/once_a_month"
@@ -120,6 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/init_survey_btn_margin"
                 android:background="@drawable/survey_btn_border"
+                android:onClick="onButtonClicked"
                 android:paddingLeft="@dimen/init_survey_btn_padding_left"
                 android:paddingTop="@dimen/init_survey_btn_padding"
                 android:paddingRight="@dimen/init_survey_btn_padding"
@@ -127,8 +130,7 @@
                 android:text="once a month"
                 android:textColor="@color/init_survey_btn_text_color"
                 android:textSize="@dimen/init_survey_btn_text_size"
-                android:textStyle="bold"
-                android:onClick="onButtonClicked"/>
+                android:textStyle="bold" />
 
 
             <TextView
@@ -137,6 +139,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/init_survey_btn_margin"
                 android:background="@drawable/survey_btn_border"
+                android:onClick="onButtonClicked"
                 android:paddingLeft="@dimen/init_survey_btn_padding_left"
                 android:paddingTop="@dimen/init_survey_btn_padding"
                 android:paddingRight="@dimen/init_survey_btn_padding"
@@ -144,8 +147,7 @@
                 android:text="more than once a week"
                 android:textColor="@color/init_survey_btn_text_color"
                 android:textSize="@dimen/init_survey_btn_text_size"
-                android:textStyle="bold"
-                android:onClick="onButtonClicked"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/once_a_week"
@@ -153,6 +155,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/init_survey_btn_margin"
                 android:background="@drawable/survey_btn_border"
+                android:onClick="onButtonClicked"
                 android:paddingLeft="@dimen/init_survey_btn_padding_left"
                 android:paddingTop="@dimen/init_survey_btn_padding"
                 android:paddingRight="@dimen/init_survey_btn_padding"
@@ -160,8 +163,7 @@
                 android:text="once a week"
                 android:textColor="@color/init_survey_btn_text_color"
                 android:textSize="@dimen/init_survey_btn_text_size"
-                android:textStyle="bold"
-                android:onClick="onButtonClicked"/>
+                android:textStyle="bold" />
 
 
             <TextView
@@ -170,6 +172,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/init_survey_btn_margin"
                 android:background="@drawable/survey_btn_border"
+                android:onClick="onButtonClicked"
                 android:paddingLeft="@dimen/init_survey_btn_padding_left"
                 android:paddingTop="@dimen/init_survey_btn_padding"
                 android:paddingRight="@dimen/init_survey_btn_padding"
@@ -177,8 +180,7 @@
                 android:text="more than once a day"
                 android:textColor="@color/init_survey_btn_text_color"
                 android:textSize="@dimen/init_survey_btn_text_size"
-                android:textStyle="bold"
-                android:onClick="onButtonClicked"/>
+                android:textStyle="bold" />
 
 
             <TextView
@@ -187,6 +189,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/init_survey_btn_margin"
                 android:background="@drawable/survey_btn_border"
+                android:onClick="onButtonClicked"
                 android:paddingLeft="@dimen/init_survey_btn_padding_left"
                 android:paddingTop="@dimen/init_survey_btn_padding"
                 android:paddingRight="@dimen/init_survey_btn_padding"
@@ -194,8 +197,7 @@
                 android:text="once a day"
                 android:textColor="@color/init_survey_btn_text_color"
                 android:textSize="@dimen/init_survey_btn_text_size"
-                android:textStyle="bold"
-                android:onClick="onButtonClicked"/>
+                android:textStyle="bold" />
 
 
         </LinearLayout>
