--- a/app/src/main/res/layout/activity_initial_survey4.xml
+++ b/app/src/main/res/layout/activity_initial_survey4.xml
@@ -36,12 +36,12 @@
             android:layout_alignParentLeft="true"
             android:layout_marginBottom="10dp"
             android:background="@color/teal"
+            android:onClick="openPrevious"
             android:padding="15dp"
             android:text="@string/previous"
             android:textAlignment="center"
             android:textColor="@color/init_survey_btn_text_color"
-            android:textSize="16sp"
-            android:onClick="openPrevious"/>
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/send_button"
@@ -50,123 +50,129 @@
             android:layout_alignParentRight="true"
             android:layout_marginBottom="10dp"
             android:background="@color/teal_shiny"
+            android:onClick="sendResults"
             android:padding="15dp"
             android:text="send"
             android:textAlignment="center"
             android:textColor="@color/init_survey_btn_text_color"
-            android:textSize="16sp"
-            android:onClick="sendResults"/>
+            android:textSize="16sp" />
 
         <LinearLayout
             android:id="@+id/container4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="50dp"
-            android:orientation="vertical"
             android:background="@color/white"
+            android:orientation="vertical"
             android:padding="0dp">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:layout_gravity="center"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/question_text_color"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/question_text_size"
-                    android:padding="20dp"
                     android:layout_marginBottom="20dp"
-                    android:text="How do you handle fingerprint errors?"/>
+                    android:padding="20dp"
+                    android:text="How do you handle fingerprint errors?"
+                    android:textAlignment="center"
+                    android:textColor="@color/question_text_color"
+                    android:textSize="@dimen/question_text_size" />
+
                 <TextView
                     android:id="@+id/handle_ignore"
-                    android:layout_marginTop="@dimen/init_survey_btn_margin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/init_survey_btn_margin"
+                    android:background="@drawable/survey_btn_border"
+                    android:onClick="onButtonClicked"
+                    android:paddingLeft="@dimen/init_survey_btn_padding_left"
+                    android:paddingTop="@dimen/init_survey_btn_padding"
+                    android:paddingRight="@dimen/init_survey_btn_padding"
+                    android:paddingBottom="@dimen/init_survey_btn_padding"
                     android:text="ignoring it"
-                    android:textStyle="bold"
                     android:textColor="@color/init_survey_btn_text_color"
                     android:textSize="@dimen/init_survey_btn_text_size"
-                    android:background="@drawable/survey_btn_border"
-                    android:paddingRight="@dimen/init_survey_btn_padding"
-                    android:paddingTop="@dimen/init_survey_btn_padding"
-                    android:paddingBottom="@dimen/init_survey_btn_padding"
-                    android:paddingLeft="@dimen/init_survey_btn_padding_left"
-                    android:onClick="onButtonClicked"/>
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/handle_switch_first_attempt"
-                    android:layout_marginTop="@dimen/init_survey_btn_margin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/init_survey_btn_margin"
+                    android:background="@drawable/survey_btn_border"
+                    android:onClick="onButtonClicked"
+                    android:paddingLeft="@dimen/init_survey_btn_padding_left"
+                    android:paddingTop="@dimen/init_survey_btn_padding"
+                    android:paddingRight="@dimen/init_survey_btn_padding"
+                    android:paddingBottom="@dimen/init_survey_btn_padding"
                     android:text="switch to my PIN/pattern after first attempt failed"
-                    android:textStyle="bold"
                     android:textColor="@color/init_survey_btn_text_color"
                     android:textSize="@dimen/init_survey_btn_text_size"
-                    android:background="@drawable/survey_btn_border"
-                    android:paddingRight="@dimen/init_survey_btn_padding"
-                    android:paddingTop="@dimen/init_survey_btn_padding"
-                    android:paddingBottom="@dimen/init_survey_btn_padding"
-                    android:paddingLeft="@dimen/init_survey_btn_padding_left"
-                    android:onClick="onButtonClicked"/>
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/handle_switch_multiple_attempts"
-                    android:layout_marginTop="@dimen/init_survey_btn_margin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/init_survey_btn_margin"
+                    android:background="@drawable/survey_btn_border"
+                    android:onClick="onButtonClicked"
+                    android:paddingLeft="@dimen/init_survey_btn_padding_left"
+                    android:paddingTop="@dimen/init_survey_btn_padding"
+                    android:paddingRight="@dimen/init_survey_btn_padding"
+                    android:paddingBottom="@dimen/init_survey_btn_padding"
                     android:text="switch to my PIN/pattern after multiple attempts failed"
-                    android:textStyle="bold"
                     android:textColor="@color/init_survey_btn_text_color"
                     android:textSize="@dimen/init_survey_btn_text_size"
-                    android:background="@drawable/survey_btn_border"
-                    android:paddingRight="@dimen/init_survey_btn_padding"
-                    android:paddingTop="@dimen/init_survey_btn_padding"
-                    android:paddingBottom="@dimen/init_survey_btn_padding"
-                    android:paddingLeft="@dimen/init_survey_btn_padding_left"
-                    android:onClick="onButtonClicked"/>
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/handle_later"
-                    android:layout_marginTop="@dimen/init_survey_btn_margin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/init_survey_btn_margin"
+                    android:background="@drawable/survey_btn_border"
+                    android:onClick="onButtonClicked"
+                    android:paddingLeft="@dimen/init_survey_btn_padding_left"
+                    android:paddingTop="@dimen/init_survey_btn_padding"
+                    android:paddingRight="@dimen/init_survey_btn_padding"
+                    android:paddingBottom="@dimen/init_survey_btn_padding"
                     android:text="I try it later again"
-                    android:textStyle="bold"
                     android:textColor="@color/init_survey_btn_text_color"
                     android:textSize="@dimen/init_survey_btn_text_size"
-                    android:background="@drawable/survey_btn_border"
-                    android:paddingRight="@dimen/init_survey_btn_padding"
-                    android:paddingTop="@dimen/init_survey_btn_padding"
-                    android:paddingBottom="@dimen/init_survey_btn_padding"
-                    android:paddingLeft="@dimen/init_survey_btn_padding_left"
-                    android:onClick="onButtonClicked"/>
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/handle_not_sure"
-                    android:layout_marginTop="@dimen/init_survey_btn_margin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/init_survey_btn_margin"
+                    android:background="@drawable/survey_btn_border"
+                    android:onClick="onButtonClicked"
+                    android:paddingLeft="@dimen/init_survey_btn_padding_left"
+                    android:paddingTop="@dimen/init_survey_btn_padding"
+                    android:paddingRight="@dimen/init_survey_btn_padding"
+                    android:paddingBottom="@dimen/init_survey_btn_padding"
                     android:text="I'm not sure"
-                    android:textStyle="bold"
                     android:textColor="@color/init_survey_btn_text_color"
                     android:textSize="@dimen/init_survey_btn_text_size"
-                    android:background="@drawable/survey_btn_border"
-                    android:paddingRight="@dimen/init_survey_btn_padding"
-                    android:paddingTop="@dimen/init_survey_btn_padding"
-                    android:paddingBottom="@dimen/init_survey_btn_padding"
-                    android:paddingLeft="@dimen/init_survey_btn_padding_left"
-                    android:onClick="onButtonClicked"/>
+                    android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/errorHandlingEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:textColor="@color/dark_grey"
-                    android:text="other comments"/>
+                    android:text="other comments"
+                    android:textColor="@color/dark_grey" />
             </LinearLayout>
         </LinearLayout>
 
