--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,92 +8,93 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
         android:contentDescription="@string/background_image_description"
-        android:src="@drawable/bg"/>
+        android:scaleType="fitXY"
+        android:src="@drawable/bg" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@drawable/color_gradient"></LinearLayout>
+        android:background="@drawable/color_gradient"
+        android:orientation="vertical"></LinearLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="200dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_alignParentBottom="true">
-    <EditText
-        android:id="@+id/set_id_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:backgroundTint="@color/teal"
-        android:textCursorDrawable="@null"
-        android:inputType="number"
-        android:textSize="@dimen/edit_text_size"
-        android:hint="@string/set_id"/>
+        android:layout_marginBottom="200dp"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/set_user_id_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_color_gradient"
-        android:textColor="@color/white"
-        android:layout_margin="2dp"
-        android:textSize="@dimen/button_text_size"
-        android:padding="2dp"
-        style="?android:attr/buttonBarButtonStyle"
-        android:text="@string/enter_id" />
+        <EditText
+            android:id="@+id/set_id_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/teal"
+            android:hint="@string/set_id"
+            android:inputType="number"
+            android:padding="20dp"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/edit_text_size" />
+
+        <Button
+            android:id="@+id/set_user_id_button"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:background="@drawable/button_color_gradient"
+            android:padding="2dp"
+            android:text="@string/enter_id"
+            android:textColor="@color/white"
+            android:textSize="@dimen/button_text_size" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="135dp"
-        android:padding="2dp"
-        android:orientation="horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:padding="2dp">
 
         <Button
             android:id="@+id/start_tracking_button"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_color_gradient"
-            android:textColor="@color/white"
             android:layout_margin="5dp"
-            android:textSize="@dimen/button_text_size"
             android:layout_weight="@dimen/button_weight"
-            style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/start_tracking" />
+            android:background="@drawable/button_color_gradient"
+            android:text="@string/start_tracking"
+            android:textColor="@color/white"
+            android:textSize="@dimen/button_text_size" />
 
         <Button
             android:id="@+id/stop_tracking_button"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_color_gradient"
-            android:textColor="@color/white"
             android:layout_margin="5dp"
-            android:padding="5dp"
-            android:textSize="@dimen/button_text_size"
             android:layout_weight="@dimen/button_weight"
-            style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/stop_tracking" />
+            android:background="@drawable/button_color_gradient"
+            android:padding="5dp"
+            android:text="@string/stop_tracking"
+            android:textColor="@color/white"
+            android:textSize="@dimen/button_text_size" />
     </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:paddingBottom="5dp"
+        android:text="Contact alice.nguyen@campus.lmu.de to report problems"
         android:textAlignment="center"
         android:textColor="@color/contact_color"
-        android:paddingBottom="5dp"
-        android:textSize="12sp"
-        android:text="Contact alice.nguyen@campus.lmu.de to report problems"/>
+        android:textSize="12sp" />
 </RelativeLayout>
